--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "git-deploy-app",
+  "name": "line-chart-socket",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -8,11 +8,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e" 
   },
-  "private": true,
+  "private": true,   
   "dependencies": {
-    "@angular/animations": "^4.2.4",
+    "@angular/animations": "^4.2.4",  
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
@@ -21,8 +21,12 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
-    "core-js": "^2.4.1",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
+    "chart.js": "^2.7.0",
+    "core-js": "^2.4.1",  
+    "ng2-charts": "^1.6.0",
     "rxjs": "^5.4.2",
+    "socket.io": "^2.0.3",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
@@ -46,4 +50,5 @@
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
   }
+    
 }
